--- a/ceng311_project/join.html
+++ b/ceng311_project/join.html
@@ -10,7 +10,7 @@
   <!-- jQuery + jQuery UI + Validation -->
   <script src="jquery/jquery-3.6.0.min.js"></script>
   <script src="jquery/jquery-ui.min.js"></script>
-  <script src="jquery/jquery.validate.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
   <script src="scripts/join.js" defer></script>
 </head>
 <body>
@@ -107,7 +107,7 @@
         <div class="input-group">
           <label for="first-name">First Name *</label>
           <input type="text" id="first-name" name="firstName" required />
-          <label for="last-name">Surname *</label>
+          <label for="last-name">Surname  *</label>
           <input type="text" id="last-name" name="lastName" required />
         </div>
         <label for="email">Email *</label>
